--- a/Xamarin Git/Xamarin_Git/MainPage.xaml
+++ b/Xamarin Git/Xamarin_Git/MainPage.xaml
@@ -2,20 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Xamarin_Git"
-             x:Class="Xamarin_Git.MainPage"
-  xmlns:vm="clr-namespace:Xamarin_Git.ViewModel">
-   <ContentPage.BindingContext>
-        <vm:MainPageViewModel/>
-    </ContentPage.BindingContext>
-<Grid>
-  <Grid.RowDefinitions>
-    <RowDefinition Height="10"/>
-  <RowDefinition Height="*"/>
-  </Grid.RowDefinitions> 
-  <Label Text="{Binding Saludos}"
+             x:Class="Xamarin_Git.MainPage">
+
+  <Label Text="Hola Gatos!"
            VerticalOptions="Center"
            HorizontalOptions="Center" />
 
-</Grid>
-  
 </ContentPage>
